[metadata]
name = musex
description = Muse source extractor
long_description = file: README.md
author = Simon Conseil
author_email = simon.conseil@univ-lyon1.fr
keywords = astronomy, astrophysics, science, muse, vlt
# license = BSD 3-Clause License
# license_file = LICENSE
# classifiers =
#     Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    adjustText
    astropy
    dataset>=1.0.3
    joblib
    lineid_plot
    matplotlib
    mpdaf
    pyyaml
    tqdm

[tool:pytest]
addopts = --doctest-modules
minversion = 3.0.0
testpaths = tests musex
# filterwarnings =
#     ignore::DeprecationWarning
